...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="we0-mF-9JQ">
                                <rect key="frame" x="49" y="54" width="30" height="30"/>
                                <animations/>
                                <state key="normal" title="Tay"/>
                                <connections>
                                    <action selector="touchTay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bHu-Cl-2Iv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lqI-GK-Unm">
                                <rect key="frame" x="174" y="54" width="30" height="30"/>
                                <animations/>
                                <state key="normal" title="DEE"/>
                                <connections>
                                    <action selector="touchDee:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kAS-Qs-zo6"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test Not Successful" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDg-fc-x9a">
                                <rect key="frame" x="49" y="111" width="153" height="21"/>
...
